--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "is_digit",
-  "version": "0.0.1",
+  "name": "@ksjaay/is_digit",
+  "version": "1.0.0",
   "description": "A simple Node.js package to check if your variable is an integer.",
   "main": "index.js",
   "scripts": {
